--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,21 @@ ul {
   grid-gap: 15px;
   list-style: none;
 }
+
+.pokemon-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #000;
+  color: #000;
+  text-transform: capitalize;
+}
+
+.pokemon-details img {
+  width: 100px;
+  height: 100px;
+}
