added 2way binding for search functionality; added styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #FDDF3C, #3B4CCA);
+  background: linear-gradient(to right, #8e0904e4, #6105f6);
 }
 
 header {
@@ -36,10 +36,11 @@ header {
   float: left;
   margin: 10px;
 }
+
 .pokemon-item a {
-  color: #000;
+  color: #e1f104;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 24px;
   transition: color 0.3s ease;
   text-transform: capitalize;
 }
@@ -51,7 +52,7 @@ header {
 ul {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 45px);
+  grid-template-rows: repeat(1, 50px);
   grid-gap: 15px;
   list-style: none;
 }
@@ -65,11 +66,13 @@ ul {
   margin: 20px auto;
   padding: 20px;
   border: 1px solid #000;
-  color: #000;
+  color: #e1f104;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
   text-transform: capitalize;
 }
 
 .pokemon-details img {
-  width: 100px;
-  height: 100px;
+  width: 250px;
+  height: 250px;
 }
